Added alerts for permission restrictions
-Added alerts for when a staff member tries to save changes to a
personal plan that has already been signed off

--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -391,6 +391,8 @@
 						}				
 					},
 					error: function(jqXHR, textStatus) {
+						
+						alert("You do not have permission to do this action.");
 
 					}
 				});
