--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -301,7 +301,7 @@ DROPDOWN HERE + INLINE FORMATTING
 					}				
 				},
 				error: function(jqXHR, textStatus) {
-					
+					alert("You do not have permission to do this action.");
 				}
 			});
 		});
