--- a/WebContent/personalplan/planning.html
+++ b/WebContent/personalplan/planning.html
@@ -143,7 +143,7 @@
 					}				
 				},
 				error: function(jqXHR, textStatus) {
-					
+					alert("You do not have permission to do this action.");
 				}
 			});
 		});
