--- a/WebContent/personalplan/support.html
+++ b/WebContent/personalplan/support.html
@@ -521,7 +521,8 @@
 					}				
 				},
 				error: function(jqXHR, textStatus) {
-					alert("ERROR HITTTING SERVICE");
+					//alert("ERROR HITTTING SERVICE");
+					alert("You do not have permission to do this action.");
 				}
 			});
 		});
