--- a/WebContent/personalplan/communication.html
+++ b/WebContent/personalplan/communication.html
@@ -81,7 +81,7 @@
 					}				
 				},
 				error: function(jqXHR, textStatus) {
-					
+					alert("You do not have permission to do this action.");
 				}
 			});
 		});	
