--- a/WebContent/personalplan/education.html
+++ b/WebContent/personalplan/education.html
@@ -197,7 +197,7 @@
 					}				
 				},
 				error: function(jqXHR, textStatus) {
-					
+					alert("You do not have permission to do this action.");
 				}
 			});
 		});
